log
Thu May 12 15:23:35 UTC 2022: 
 sudoku.c | 20 ++++++++++++++++++--
 1 file changed, 18 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:58:15: error: ‘k’ undeclared (first use in this function)
           for(k=1;k<10;k++){
               ^
sudoku.c:58:15: note: each undeclared identifier is reported only once for each function it appears in
sudoku.c:54:13: error: unused variable ‘m’ [-Werror=unused-variable]
     int i,j,m;
             ^
cc1: all warnings being treated as errors
Compilation failed
0f2fa53
Thu May 12 15:23:44 UTC 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
f14e7d8
Thu May 12 15:38:15 UTC 2022: 
 sudoku.c | 17 ++++++++++++++++-
 1 file changed, 16 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
sudoku.c: In function ‘is_valid’:
sudoku.c:50:45: error: expected expression before ‘)’ token
       if(n->sudo[i][j]==0 || n->sudo[i][j]!=){
                                             ^
sudoku.c:48:21: error: unused variable ‘C’ [-Werror=unused-variable]
     int A[10],B[10],C[10];
                     ^
sudoku.c:48:15: error: unused variable ‘B’ [-Werror=unused-variable]
     int A[10],B[10],C[10];
               ^
sudoku.c:48:9: error: variable ‘A’ set but not used [-Werror=unused-but-set-variable]
     int A[10],B[10],C[10];
         ^
cc1: all warnings being treated as errors
Compilation failed
b0f777e
Thu May 12 15:43:13 UTC 2022: 
 sudoku.c | 12 +++---------
 1 file changed, 3 insertions(+), 9 deletions(-)
In file included from test.c:5:0:
sudoku.c: In function ‘is_valid’:
sudoku.c:47:15: error: unused variable ‘p’ [-Werror=unused-variable]
     int i,j,k,p;
               ^
sudoku.c:47:13: error: unused variable ‘k’ [-Werror=unused-variable]
     int i,j,k,p;
             ^
sudoku.c:50:22: error: ‘j’ may be used uninitialized in this function [-Werror=maybe-uninitialized]
       if(A[n->sudo[i][j]]==0){
            ~~~~~~~~~~^~~
cc1: all warnings being treated as errors
Compilation failed
bd5dd2d
Thu May 12 15:43:26 UTC 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
test.c: In function ‘is_valid’:
sudoku.c:50:22: error: ‘j’ may be used uninitialized in this function [-Werror=maybe-uninitialized]
       if(A[n->sudo[i][j]]==0){
            ~~~~~~~~~~^~~
cc1: all warnings being treated as errors
Compilation failed
3fe0957
Thu May 12 15:43:53 UTC 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
440313d
Thu May 12 15:45:52 UTC 2022: 
 sudoku.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
test.c: In function ‘is_valid’:
test.c:245:5: error: ‘main’ is normally a non-static function [-Werror=main]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:262:1: error: expected declaration or statement at end of input
 }
 ^
test.c:262:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
At top level:
test.c:245:5: error: ‘main’ defined but not used [-Werror=unused-function]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:7:8: error: ‘_strdup’ defined but not used [-Werror=unused-function]
 char * _strdup(const char * str) {
        ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
8bd6430
Thu May 12 15:48:19 UTC 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
test.c: In function ‘is_valid’:
test.c:245:5: error: ‘main’ is normally a non-static function [-Werror=main]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:262:1: error: expected declaration or statement at end of input
 }
 ^
In file included from test.c:5:0:
sudoku.c:48:21: error: unused variable ‘C’ [-Werror=unused-variable]
     int A[10],B[10],C[10];
                     ^
sudoku.c:48:15: error: unused variable ‘B’ [-Werror=unused-variable]
     int A[10],B[10],C[10];
               ^
test.c:262:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
At top level:
test.c:245:5: error: ‘main’ defined but not used [-Werror=unused-function]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:7:8: error: ‘_strdup’ defined but not used [-Werror=unused-function]
 char * _strdup(const char * str) {
        ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
8e42ed5
Thu May 12 15:48:29 UTC 2022: 
 sudoku.c | 1 -
 1 file changed, 1 deletion(-)
test.c: In function ‘is_valid’:
test.c:245:5: error: ‘main’ is normally a non-static function [-Werror=main]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:262:1: error: expected declaration or statement at end of input
 }
 ^
In file included from test.c:5:0:
sudoku.c:48:21: error: unused variable ‘C’ [-Werror=unused-variable]
     int A[10],B[10],C[10];
                     ^
sudoku.c:48:15: error: unused variable ‘B’ [-Werror=unused-variable]
     int A[10],B[10],C[10];
               ^
test.c:262:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
At top level:
test.c:245:5: error: ‘main’ defined but not used [-Werror=unused-function]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:7:8: error: ‘_strdup’ defined but not used [-Werror=unused-function]
 char * _strdup(const char * str) {
        ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
6bf981e
Thu May 12 15:48:55 UTC 2022: 
 sudoku.c | 22 +++++++++++-----------
 1 file changed, 11 insertions(+), 11 deletions(-)
 tests:  2|4
total_score: 15/70
03083c9
Thu May 12 15:49:31 UTC 2022: 
 sudoku.c | 22 +++++++++++-----------
 1 file changed, 11 insertions(+), 11 deletions(-)
In file included from test.c:5:0:
sudoku.c: In function ‘is_valid’:
sudoku.c:55:20: error: statement with no effect [-Werror=unused-value]
           return 0;n
                    ^
sudoku.c:56:9: error: expected ‘;’ before ‘}’ token
         }
         ^
test.c:245:5: error: ‘main’ is normally a non-static function [-Werror=main]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:262:1: error: expected declaration or statement at end of input
 }
 ^
In file included from test.c:5:0:
sudoku.c:48:21: error: unused variable ‘C’ [-Werror=unused-variable]
     int A[10],B[10],C[10];
                     ^
sudoku.c:48:15: error: unused variable ‘B’ [-Werror=unused-variable]
     int A[10],B[10],C[10];
               ^
test.c:262:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
At top level:
test.c:245:5: error: ‘main’ defined but not used [-Werror=unused-function]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:7:8: error: ‘_strdup’ defined but not used [-Werror=unused-function]
 char * _strdup(const char * str) {
        ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
5bc7d93
Thu May 12 15:49:34 UTC 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
test.c: In function ‘is_valid’:
test.c:245:5: error: ‘main’ is normally a non-static function [-Werror=main]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:262:1: error: expected declaration or statement at end of input
 }
 ^
In file included from test.c:5:0:
sudoku.c:48:21: error: unused variable ‘C’ [-Werror=unused-variable]
     int A[10],B[10],C[10];
                     ^
sudoku.c:48:15: error: unused variable ‘B’ [-Werror=unused-variable]
     int A[10],B[10],C[10];
               ^
test.c:262:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
At top level:
test.c:245:5: error: ‘main’ defined but not used [-Werror=unused-function]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:7:8: error: ‘_strdup’ defined but not used [-Werror=unused-function]
 char * _strdup(const char * str) {
        ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
43d2763
Thu May 12 15:49:50 UTC 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
test.c: In function ‘is_valid’:
test.c:245:5: error: ‘main’ is normally a non-static function [-Werror=main]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:262:1: error: expected declaration or statement at end of input
 }
 ^
test.c:262:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
At top level:
test.c:245:5: error: ‘main’ defined but not used [-Werror=unused-function]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:7:8: error: ‘_strdup’ defined but not used [-Werror=unused-function]
 char * _strdup(const char * str) {
        ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
4bde26a
Thu May 12 15:51:21 UTC 2022: 
 sudoku.c | 1 -
 1 file changed, 1 deletion(-)
In file included from test.c:5:0:
test.c: In function ‘is_valid’:
sudoku.c:50:22: error: ‘j’ may be used uninitialized in this function [-Werror=maybe-uninitialized]
       if(A[n->sudo[i][j]]==0){
            ~~~~~~~~~~^~~
cc1: all warnings being treated as errors
Compilation failed
86dca35
Thu May 12 15:52:09 UTC 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
fffabca
Thu May 12 15:52:28 UTC 2022: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|5
total_score: 0/70
839e3f7
Thu May 12 15:56:52 UTC 2022: 
 sudoku.c | 10 +++++-----
 1 file changed, 5 insertions(+), 5 deletions(-)
 tests:  0|5
total_score: 0/70
a75dd77
Thu May 12 15:59:51 UTC 2022: 
 sudoku.c | 16 ++++++++++++----
 1 file changed, 12 insertions(+), 4 deletions(-)
 tests:  0|5
total_score: 0/70
2e4d125
